--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -3,4 +3,9 @@
          (such as screen margins) for screens with more than 820dp of available width. This
          would include 7" and 10" devices in landscape (~960dp and ~1280dp respectively). -->
     <dimen name="activity_horizontal_margin">64dp</dimen>
+
+    <dimen name="row_icons_padding">8dp</dimen>
+    <dimen name="appbar_padding_top">8dp</dimen>
+
+    <dimen name="product_item_image_size">150dp</dimen>
 </resources>
