--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,11 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+
+    <dimen name="row_icons_padding">8dp</dimen>
+    <dimen name="appbar_padding_top">8dp</dimen>
+
+    <dimen name="product_item_image_size">150dp</dimen>
+
 </resources>
