--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="appbar_padding_top">8dp</dimen>
 
     <dimen name="product_item_image_size">150dp</dimen>
+
+    <dimen name="product_item_image_size_thumb">45dp</dimen>
 </resources>
