--- a/app/src/main/res/layout/item_product_cart.xml
+++ b/app/src/main/res/layout/item_product_cart.xml
@@ -15,7 +15,7 @@
         <ImageView
             android:layout_width="@dimen/product_item_image_size_thumb"
             android:layout_height="@dimen/product_item_image_size_thumb"
-            android:paddingRight="5dp"
+            android:paddingRight="10dp"
             android:id="@+id/imgProduct"
             android:src="@mipmap/ic_launcher"
             android:layout_alignParentTop="true"
@@ -45,6 +45,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Medium Text"
                 android:layout_weight="1"
+                style="@style/textBold"
                 android:id="@+id/txtTitle"/>
 
 
@@ -54,6 +55,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Medium Text"
                 android:layout_weight="1"
+                style="@style/textNormal"
                 android:id="@+id/txtUnit"/>
 
             <TextView
@@ -62,6 +64,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Medium Text"
                 android:layout_weight="1"
+                style="@style/textNormal"
                 android:id="@+id/txtPrice"/>
 
         </LinearLayout>
